<resources>
    <string name="app_name">LiuhlApp</string>
    <string name="str_input_acc_hint">请输入账号...</string>
    <string name="str_acc_input_lable">账号</string>
    <string name="str_pwd_input_lable">密码</string>
    <string name="str_input_pwd_hint">请输入密码...</string>
    <string name="opt_remeber">记住密码</string>
    <string name="login">登录</string>
    <string name="opt_hide_login">隐身登录</string>
    <string name="opt_open_vibra">开启震动</string>
    <string name="opt_accept_group_msg">接收群消息</string>
    <string name="opt_silent">静音登录</string>
</resources>
