<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/loginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll01"
        android:orientation="vertical"
        android:layout_weight="1.0"
        android:background="@drawable/default_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl02"
            android:background="@drawable/login_back"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="62dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/face_img"
                android:background="@drawable/login_head"/>

            <EditText
                android:id="@+id/login_edit_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/qq_edit_login"
                android:paddingLeft="45.0sp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/face_img"
                android:maxLength="10"
                android:hint="@string/str_input_acc_hint"
                android:inputType="number"
                />
            <TextView
                android:id="@+id/tv01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="16dip"
                android:textColor="@color/color_ff3f3f3f"
                android:text="@string/str_acc_input_lable"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_alignBottom="@+id/login_edit_account"
                android:paddingLeft="7dp"
                android:layout_marginRight="15dp"

                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_btn_02"
                android:background="@drawable/more_select"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_alignBottom="@+id/login_edit_account"
                />

            <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_edit_account"
                android:inputType="textPassword"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignRight="@id/login_edit_account"
                android:maxLength="16"
                android:saveEnabled="true"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/qq_edit_login"
                android:paddingLeft="45.0sp"
                android:hint="@string/str_input_pwd_hint"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dip"
                android:textColor="@color/color_ff3f3f3f"
                android:id="@+id/tv02"
                android:text="@string/str_pwd_input_lable"
                android:layout_alignTop="@+id/login_edit_pwd"
                android:layout_alignBottom="@+id/login_edit_pwd"
                android:gravity="center_vertical"
                android:layout_alignRight="@+id/tv01"
                android:paddingLeft="7.0sp"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_ch_savepwd"
                android:layout_alignBaseline="@+id/login_btn_login"
                android:textSize="16.0sp"
                android:textColor="@color/color_ff222222"
                android:paddingLeft="25dp"
                android:button="@drawable/qq_btn_check"
                android:checked="true"
                android:text="@string/opt_remeber"
                />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="130.0dp"
                android:layout_height="42.0dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="7dp"
                android:layout_marginRight="12dp"
                android:layout_below="@+id/tv02"
                android:text="@string/login"
                />
        </RelativeLayout>

        <TableLayout
            android:id="@+id/tl01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:stretchColumns="1"
            >

            <TableRow>
                <CheckBox android:textColor="@color/color_7fffffff"
                    android:id="@+id/login_cb_visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                          android:text="@string/opt_hide_login"
                          style="@style/MyCheckBox"

                    />
                <CheckBox android:textColor="#7fffffff"
                          android:layout_gravity="right"
                          android:id="@+id/login_cb_openvibra"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/opt_open_vibra"
                          style="@style/MyCheckBox" />
            </TableRow>

            <TableRow>
                <CheckBox android:textColor="#7fffffff"
                          android:id="@+id/login_cb_receivegroupmsg"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/opt_accept_group_msg"
                          style="@style/MyCheckBox" />
                <CheckBox android:textColor="#7fffffff"
                          android:layout_gravity="right" android:id="@+id/login_cb_quite"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/opt_silent" style="@style/MyCheckBox" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
